# PyTicTacToe

./: .gitignore  ReadMe.txt  evaluation.py  grid.py  main.py  player.py  pyproject.toml  status.py  tests.py
docs/: project.txt  projectplan.txt  unittests.txt
src/darrought66/pytictactoe/: GameState.py  Outcome.py  Player.py  Status.py  calc_size.py  console_app.py  construct_state_tree.py  debug_test_util.py  evaluation.py  location.py  print_tree.py
src/darrought66/tic_tac_toe/: GameState.py  Outcome.py  calc_size.py  console_app.py  construct_state_tree.py  debug_test_util.py  evaluation.py  location.py  pickle_game_states.py
tests/: test_005_Player.py  test_010_Status.py  test_030_evaluation.py  test_035_tree.py
tests/darrought66/pytictactoe/: test_015_Outcome.py  test_020_location.py  test_025_GameState.py  test_030_evaluation.py
tests/darrought66/tic_tac_toe/: test_005_Player.py  test_010_Status.py  test_015_Outcome.py  test_020_location.py  test_025_GameState.py  test_030_evaluation.py  tests.py
