[tool.poetry]
name="pytictactoe"
packages = [{include = "darrought66/pytictactoe", from = "src"}]
[project]
name = "pytictactoe"
version = "0.1.0"
description = "tic tac toe engine"
authors = [
    {name = "Rob Darrough",email = "darrought66@gmail.com"}
]
license = "Apache"
requires-python = ">=3.14"
dependencies = [
    "argcomplete (==3.6.3)",
    "asttokens (==3.0.1)",
    "blinker (==1.9.0)",
    "boto3 (==1.42.59)",
    "botocore (==1.42.59)",
    "click (==8.3.2)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "debugpy (==1.8.20)",
    "decorator (==5.2.1)",
    "executing (==2.2.1)",
    "flask (==3.1.3)",
    "ipykernel (==7.2.0)",
    "ipython (==9.12.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "itsdangerous (==2.2.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "jmespath (==1.1.0)",
    "jupyter-client (==8.8.0)",
    "jupyter-core (==5.9.1)",
    "markupsafe (==3.0.3)",
    "matplotlib-inline (==0.2.1)",
    "nest-asyncio (==1.6.0)",
    "packaging (==26.0)",
    "parso (==0.8.6)",
    "pipx (==1.11.1)",
    "platformdirs (==4.9.4)",
    "prompt-toolkit (==3.0.52)",
    "psutil (==7.2.2)",
    "pure-eval (==0.2.3)",
    "pygments (==2.20.0)",
    "python-dateutil (==2.9.0.post0)",
    "pyzmq (==27.1.0)",
    "s3transfer (==0.16.0)",
    "six (==1.17.0)",
    "stack-data (==0.6.3)",
    "tornado (==6.5.5)",
    "traitlets (==5.14.3)",
    "urllib3 (==2.6.3)",
    "userpath (==1.9.2)",
    "waitress (==3.0.2)",
    "wcwidth (==0.6.0)",
    "werkzeug (==3.1.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
